 * added basic support for importing simple DXF contour files
 * added support for engravings
 * integrated "help" links pointing to the wiki
 * improved OpenGL lightning (contributed by imyrek)
 * allow non-square profiles for the support grid
 * added ability to create support grids with different x/y grid distance
 * added x/y offsets to support grid options
 * switched default tool size from radius to diameter
 * fixed performance issue when using a support grid
 * fixed empty toolpath after transforming the model
 * added minor fix for PushCutter

Version 0.2.5 - 2010-06-10
 * added support bridges for holding the object during cutting
 * calculate the estimated machine time for each toolpath
 * changing the unit (mm/inch) now opens a dialog for scaling the model,
   processing dimensions or tool dimensions accordingly
 * remove unnecessary moves to safety height
 * changed name of configuration setting "overlap" to "overlap_percent"
   (you may need to change this name in your custom config files)

Version 0.2.4 - 2010-04-12
 * added a simple simulation mode for visualizing the material penetration of a toolpath
 * join tangential moves (removes the inner points in a colinear set of adjacent path points)
 * fixed careless import of Tkinter
 * added missing INSTALL.TXT to source package
 * fixed typo that breaks PyCAM for Python 2.6

Version 0.2.3 - 2010-04-05
 * GUI change: tool and process settings can be combined into tasks
 * store configured settings to a file in the user's home directory
 * added "material allowance" support for non-ODE calculations
 * added export of EMC2 tool definitions
 * added a warning dialog (GUI) for missing dependencies during startup (especially useful for Windows)
 * improved GUI for model scaling
 * allow to configure if the tool should move inside/along/around the boundary limits
 * fixed "overlap" calculation
 * prevent invalid input values (zero tool radius, ...)