@@ -7,6 +7,7 @@ Version 0.3.0 - UNRELEASED
  * allow non-square profiles for the support grid
  * added ability to create support grids with different x/y grid distance
  * added x/y offsets to support grid options
+ * added 3D view movement and rotation with a keyboard in addition to the mouse
  * switched default tool size from radius to diameter
  * fixed performance issue when using a support grid
  * fixed empty toolpath after transforming the model
